2010-10-08  Francois Felix Ingrand  <felix@ingrand.net>

	* ev-predicate.c (declare_eval_pred): Use LONG-LONGP instead of
		  LONG_LONGP (to remain consistent with predicate/function name.

2010-10-07  Francois Felix Ingrand  <felix@ingrand.net>

	* ev-predicate.c (declare_eval_pred): added INTEGERP, FLOATP and
		  LONG_LONGP as evaluable predicates.

	* ev-function.c (float_to_int_ef): Allowed to pass an int...
	(int_to_float_ef): allowed to pass a float and a long long

	* oprs-init.c (parse_one_or_more): The PRS kernel should return 0 when
		  everything is OK. Thanks to Eric Engstrom at SIFT for pointing this.

2010-03-05  Francois Felix Ingrand  <felix@ingrand.net>

	* Clean up the version stuff... Now version is defined in the
	configure.ac only and then it propagates in version.c and the
	documentation with the proper PACKAGE_VERSION macro.

2010-03-02  Francois Felix Ingrand  <felix@ingrand.net>

	* version.c: Bumping patch level to 1.0.7 Beta to avoid confusion.

2010-02-22  Francois Felix Ingrand  <felix@ingrand.net>

	*  git clone http://softs.laas.fr/git/robots/openprs.git
	should give access to the git repository in anonymous mode. One
	cannot commit, but still, one can send me patches to be considered
	for inclusion in the official release.
	I also added the openprs mail list as a recipient of the the git
	messages. 

2010-02-21  Francois Felix Ingrand  <felix@ingrand.net>

	* action.c: Jeff Rye (jrye@sift.info) added a new format directive.

2010-02-18  Francois Felix Ingrand  <felix@ingrand.net>

	* oprs-parser.y: redundant code...

2010-02-17  Francois Felix Ingrand  <felix@ingrand.net>

	* user-ev-function.c (declare_user_eval_funct): DO NOT CALL an
	evaluation function TOTO... some test OPs (such as the one in
	maint.opf) use a TOTO predicate, and it is then called as a function.

	* activate.c (restore_suspended_tib) soak.c (find_aop_from_rop_for_maint_goal): still the same
	bug... progressing slowly.
