@@ -1,4 +1,4 @@
- Copyright (c) 1991-2010 Francois Felix Ingrand.
+ Copyright (c) 1991-2011 Francois Felix Ingrand.
  All rights reserved.
 
  Redistribution and use in source and binary forms, with or without
