@@ -67,7 +67,7 @@ void *load_list_reloc_elt(Dump_Type dt);
 void ntohd(u_char *buf, double *dbl);
 void htond(double *dbl, u_char *buf);
 void ntohll(u_char *buf, long long *ll);
-void htonll(long long *ll, u_char *buf);
+void htonll(long long ll, u_char *buf);
 
 int dump_ptr(void *ptr);
 int dump_char(char c);
